Story 1849. Updated codes and tests.